Fixng the gap between the rows and from the left Div as well

--- a/blocks/veiculos-highlight/veiculos-highlight.css
+++ b/blocks/veiculos-highlight/veiculos-highlight.css
@@ -125,7 +125,7 @@
         display: grid;
         grid-template-columns: repeat(3, 33%);
         grid-gap: 10px;
-        height: 25rem;
+        height: 20rem;
     }
 }
 
